Horizontal overflow fixed among others tiny corrections

--- a/css/footer.css
+++ b/css/footer.css
@@ -17,10 +17,11 @@ footer {
 
 .footer-section {
   flex: none;
+  text-align: center;
   border-radius: 15%;
   padding: 10px;
   margin: 5px 10px;
-  width: 80px;
+  width: 105px;
   text-decoration: none;
   color: var(--dark-secondary);
   border: solid 2px var(--primary-color);
