--- a/css/global.css
+++ b/css/global.css
@@ -8,9 +8,12 @@
   --light-secondary: #cfdbd5;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   background-color: var(--light-primary);
-  overflow-x: hidden;
   font-family: Arial, Helvetica, sans-serif;
 }
 
